<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.example.shoponline_java.Activity.SignUpActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_signup"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_phone"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <EditText
            android:id="@+id/etInternational"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/register_bg"
            android:hint="+84"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/register_bg"
            android:hint="@string/enter_phone"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@+id/etInternational"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/verification_code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <EditText
            android:id="@+id/etCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/register_bg"
            android:hint="@string/enter_code"
            android:layout_weight="1"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:background="@drawable/btnsend_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etCode"
            app:layout_constraintTop_toTopOf="@+id/etCode" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/purple_bg"
        android:text="@string/btnCheck"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/line1"
        app:layout_constraintStart_toStartOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/goToSignIn"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>