<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoponline_java.Activity.OrderActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titleOrder"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeasdas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressItems"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Selina K, 21/3, Rag-ava Street, Silver tone, Kodaira - 655 789"
        app:layout_constraintStart_toEndOf="@+id/tvTimeasdas"
        app:layout_constraintTop_toTopOf="@+id/tvTimeasdas" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDate"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="27/06/2024"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/order_items"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        tools:layout_editor_absoluteX="0dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Items"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTimeasdas"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titlePayment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTimeasdas"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/tvPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paypal"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titleTotalPrice"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTimeasdas"
        app:layout_constraintTop_toBottomOf="@+id/tvPaymentMethod" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="$3.99"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:background="@drawable/purple_bg"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/titleBtnOrderAgain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>