<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoponline_java.Activity.CheckOutActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleCheckOut"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/titlePay"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/textView17">

        <RadioButton
            android:id="@+id/rdoBtnGPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GPay" />

        <RadioButton
            android:id="@+id/rdoBtnDebit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Debit / Credit card" />

        <RadioButton
            android:id="@+id/rdoBtnPaypal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Paypal" />

        <RadioButton
            android:id="@+id/rdoBtnBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bank transfer" />
    </RadioGroup>
    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/titleDeliverAddress"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAddress"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/address_items"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/tvNewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/titleAddNewAddress"
        android:textSize="18sp"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewAddress" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_shipping"
        app:layout_constraintStart_toStartOf="@+id/tvNewAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvNewAddress" />
    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/titleEstimatedDelivery"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />
    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="25 March 2024"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/titleAmountPayable"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/totalCheckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="$0.0"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/titleBtnPayAndCompleted"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>